force-app/main/default/objects/Reporting_1__c/Reporting_1__c.object-meta.xml
<CustomObject>
    <label>Reporting 1</label>
    <nameField>
        <displayFormat>RPT-{0000}</displayFormat>
        <label>Reporting 1 Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Reporting 1</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>