force-app/main/default/objects/Reporting_1__c/fields/Bike_Demoed__c.field-meta.xml
<CustomField>
    <fullName>Bike_Demoed__c</fullName>
    <label>Bike Demoed</label>
    <length>25</length>
    <type>Text</type>
</CustomField>