force-app/main/default/objects/Reporting_1__c/fields/Bike_Sold__c.field-meta.xml
<CustomField>
    <fullName>Bike_Sold__c</fullName>
    <label>Bike Sold</label>
    <length>25</length>
    <type>Text</type>
</CustomField>